--- a/force-app/main/default/classes/SSP_GlobalConstants.cls
+++ b/force-app/main/default/classes/SSP_GlobalConstants.cls
@@ -11,7 +11,7 @@
 * 1.0       12/04/2019             Sanchita Tibrewala           Initial Version
 **/
 public class SSP_GlobalConstants {
-    //checking git Dec07
+    //checking git Dec07 second change
     public static final String PHONE_TYPE_CODE = 'LND';
     public static final String CHILD_CARE_CODE = 'CC';
     public static final String OTHER_RELATIONSHIP = 'Other Relationship';
